// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AtMention should match snapshot when mentioning all 1`] = `
<Fragment>
  (at)-all
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning all with mixed case 1`] = `
<Fragment>
  (at)-aLL
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning current user 1`] = `
<span>
  <Overlay
    animation={[Function]}
    onHide={[Function]}
    placement="right"
    rootClose={true}
    show={false}
  >
    <Connect(InjectIntl(ProfilePopover))
      hasMention={false}
      hide={[Function]}
      isRHS={false}
      src="/api/v4/users/abc1/image"
      userId="abc1"
    />
  </Overlay>
  <a
    className="mention-link mention--highlight"
    onClick={[Function]}
  >
    @First Last
  </a>
</span>
`;

exports[`components/AtMention should match snapshot when mentioning user 1`] = `
<span>
  <Overlay
    animation={[Function]}
    onHide={[Function]}
    placement="right"
    rootClose={true}
    show={false}
  >
    <Connect(InjectIntl(ProfilePopover))
      hasMention={false}
      hide={[Function]}
      isRHS={false}
      src="/api/v4/users/abc2/image"
      userId="abc2"
    />
  </Overlay>
  <a
    className="mention-link"
    onClick={[Function]}
  >
    @Nick
  </a>
</span>
`;

exports[`components/AtMention should match snapshot when mentioning user containing and followed by punctuation 1`] = `
<span>
  <Overlay
    animation={[Function]}
    onHide={[Function]}
    placement="right"
    rootClose={true}
    show={false}
  >
    <Connect(InjectIntl(ProfilePopover))
      hasMention={false}
      hide={[Function]}
      isRHS={false}
      src="/api/v4/users/abc3/image"
      userId="abc3"
    />
  </Overlay>
  <a
    className="mention-link"
    onClick={[Function]}
  >
    @Dot Matrix
  </a>
  .
</span>
`;

exports[`components/AtMention should match snapshot when mentioning user containing punctuation 1`] = `
<span>
  <Overlay
    animation={[Function]}
    onHide={[Function]}
    placement="right"
    rootClose={true}
    show={false}
  >
    <Connect(InjectIntl(ProfilePopover))
      hasMention={false}
      hide={[Function]}
      isRHS={false}
      src="/api/v4/users/abc3/image"
      userId="abc3"
    />
  </Overlay>
  <a
    className="mention-link"
    onClick={[Function]}
  >
    @Dot Matrix
  </a>
</span>
`;

exports[`components/AtMention should match snapshot when mentioning user followed by punctuation 1`] = `
<span>
  <Overlay
    animation={[Function]}
    onHide={[Function]}
    placement="right"
    rootClose={true}
    show={false}
  >
    <Connect(InjectIntl(ProfilePopover))
      hasMention={false}
      hide={[Function]}
      isRHS={false}
      src="/api/v4/users/abc2/image"
      userId="abc2"
    />
  </Overlay>
  <a
    className="mention-link"
    onClick={[Function]}
  >
    @Nick
  </a>
  ...
</span>
`;

exports[`components/AtMention should match snapshot when mentioning user with different teammate name display setting 1`] = `
<span>
  <Overlay
    animation={[Function]}
    onHide={[Function]}
    placement="right"
    rootClose={true}
    show={false}
  >
    <Connect(InjectIntl(ProfilePopover))
      hasMention={false}
      hide={[Function]}
      isRHS={false}
      src="/api/v4/users/abc2/image"
      userId="abc2"
    />
  </Overlay>
  <a
    className="mention-link"
    onClick={[Function]}
  >
    @user1
  </a>
</span>
`;

exports[`components/AtMention should match snapshot when mentioning user with mixed case 1`] = `
<span>
  <Overlay
    animation={[Function]}
    onHide={[Function]}
    placement="right"
    rootClose={true}
    show={false}
  >
    <Connect(InjectIntl(ProfilePopover))
      hasMention={false}
      hide={[Function]}
      isRHS={false}
      src="/api/v4/users/abc2/image"
      userId="abc2"
    />
  </Overlay>
  <a
    className="mention-link"
    onClick={[Function]}
  >
    @Nick
  </a>
</span>
`;

exports[`components/AtMention should match snapshot when not mentioning a user 1`] = `
<Fragment>
  (at)-notauser
</Fragment>
`;

exports[`components/AtMention should match snapshot when not mentioning a user with mixed case 1`] = `
<Fragment>
  (at)-NOTAuser
</Fragment>
`;
